--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,5 @@
 {
-  "presets": ["@babel/preset-react", "@babel/preset-env", "babel-preset-mobx"],
+  "presets": [ "@babel/preset-env", "babel-preset-mobx"],
   "plugins": [
     "@babel/plugin-transform-runtime",
     "@babel/plugin-proposal-object-rest-spread",
