--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"build": "cross-env NODE_ENV=production webpack --config webpack.config.js --mode production",
+		"build": "cross-env NODE_ENV=production node ./webpack.config.js",
 		"dev": "cross-env NODE_ENV=development node ./webpack.config.js",
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"report": "webpack-bundle-analyzer --port 8123 dist/stats.json"
@@ -37,7 +37,10 @@
 		"webpack-dev-server": "^3.10.3"
 	},
 	"dependencies": {
+		"@babel/plugin-transform-runtime": "^7.9.0",
 		"@babel/polyfill": "^7.8.7",
+		"babel-plugin-transform-remove-strict-mode": "0.0.2",
+		"babel-preset-mobx": "^2.0.0",
 		"clean-webpack-plugin": "^3.0.0",
 		"cross-env": "^7.0.2",
 		"css-loader": "^3.4.2",
