--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"build": "cross-env NODE_ENV=production node ./webpack.config.js",
+		"build": "cross-env NODE_ENV=production node ./webpack.config.prod.js",
 		"dev": "cross-env NODE_ENV=development node ./webpack.config.js",
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"report": "webpack-bundle-analyzer --port 8123 dist/stats.json"
